@@ -10,30 +10,28 @@ import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 import org.jspecify.annotations.Nullable;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 public class ClanCommand implements TabExecutor {
-	private final Map<String, ISubCommand> subCommands = new HashMap<>(Collections.emptyMap());
+	private final Map<String, ISubCommand> subCommands = Map.ofEntries(
+		Map.entry("create", new ClanCreateCommand()),
+		Map.entry("disband", new ClanDisbandCommand()),
+		Map.entry("invite", new ClanInviteCommand()),
+		Map.entry("kick", new ClanKickCommand()),
+		Map.entry("promote", new ClanPromoteCommand()),
+		Map.entry("demote", new ClanDemoteCommand()),
+		Map.entry("chat", new ClanChatCommand()),
+		Map.entry("claim", new ClanClaimCommand()),
+		Map.entry("unclaim", new ClanUnclaimCommand()),
+		Map.entry("home", new ClanHomeCommand()),
+		Map.entry("sethome", new ClanSetHomeCommand()),
+		Map.entry("info", new ClanInfoCommand())
+	);
 
 	@Override
 	public boolean onCommand(@NotNull final CommandSender sender, @NotNull final Command command,
 		@NotNull final String label, @NotNull final String[] args) {
-		this.subCommands.put("create", new ClanCreateCommand());
-		this.subCommands.put("disband", new ClanDisbandCommand());
-		this.subCommands.put("invite", new ClanInviteCommand());
-		this.subCommands.put("kick", new ClanKickCommand());
-		this.subCommands.put("promote", new ClanPromoteCommand());
-		this.subCommands.put("demote", new ClanDemoteCommand());
-		this.subCommands.put("chat", new ClanChatCommand());
-		this.subCommands.put("claim", new ClanClaimCommand());
-		this.subCommands.put("unclaim", new ClanUnclaimCommand());
-		this.subCommands.put("home", new ClanHomeCommand());
-		this.subCommands.put("sethome", new ClanSetHomeCommand());
-		this.subCommands.put("info", new ClanInfoCommand());
-
 		if (sender instanceof final Player player && args.length != 0 && this.subCommands.containsKey(args[0])) {
 			this.subCommands
 				.get(args[0])
